tests/snapshots/renderer/sanitize_escapes_inline_raw_html.snap
---
source: tests/snapshot_render.rs
assertion_line: 29
description: "<span>ok</span>\n"
---
<p>&lt;span&gt;ok&lt;/span&gt;</p>
