tests/snapshots/renderer/sanitize_keeps_allowed_schemes.snap
---
source: tests/snapshot_render.rs
assertion_line: 29
description: "[guide](./guide.md) [mail](mailto:hi@example.com) [phone](tel:+123)\n"
---
<p><a href="./guide.md">guide</a> <a href="mailto:hi@example.com">mail</a> <a href="tel:+123">phone</a></p>
