tests/snapshots/renderer/sanitize_neutralizes_obfuscated_javascript_link.snap
---
source: tests/snapshot_render.rs
assertion_line: 29
description: "[run](  JaVa ScRiPt:alert(1))\n"
---
<p><a href="#">run</a></p>
