tests/snapshots/renderer/table_accepts_pipe_less_body_row.snap
---
source: tests/support/snapshot.rs
description: "| abc | def |\n| --- | --- |\nplain\n"
---
<table>
<thead>
<tr>
<th>abc</th>
<th>def</th>
</tr>
</thead>
<tbody>
<tr>
<td>plain</td>
<td></td>
</tr>
</tbody>
</table>
